@@ -1,0 +1,540 @@
+ABSTRACT SYNTAX TREE:
+  (TOK_QUERY (TOK_FROM (TOK_TABREF src)) (TOK_INSERT (TOK_DESTINATION (TOK_TAB dest1)) (TOK_SELECT (TOK_SELEXPR (TOK_FUNCTION length (TOK_COLREF src value))))))
+
+STAGE DEPENDENCIES:
+  Stage-1 is a root stage
+  Stage-0 depends on stages: Stage-1
+
+STAGE PLANS:
+  Stage: Stage-1
+    Map Reduce
+      Alias -> Map Operator Tree:
+        src 
+            Select Operator
+              expressions:
+                    expr: value
+                    type: string
+              Select Operator
+                expressions:
+                      expr: length(0)
+                      type: int
+                File Output Operator
+                  compressed: false
+                  GlobalTableId: 1
+                  table:
+                      input format: org.apache.hadoop.mapred.TextInputFormat
+                      output format: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
+                      serde: org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe
+                      name: dest1
+
+  Stage: Stage-0
+    Move Operator
+      tables:
+            replace: true
+            table:
+                input format: org.apache.hadoop.mapred.TextInputFormat
+                output format: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
+                serde: org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe
+                name: dest1
+
+
+7
+6
+7
+6
+7
+7
+7
+7
+6
+7
+7
+7
+7
+7
+7
+7
+7
+6
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+6
+7
+7
+7
+7
+6
+6
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+6
+7
+7
+7
+7
+5
+7
+7
+7
+7
+6
+7
+7
+7
+7
+7
+7
+7
+6
+7
+7
+7
+7
+6
+7
+6
+6
+5
+7
+6
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+6
+7
+6
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+6
+7
+7
+7
+7
+7
+7
+6
+7
+7
+7
+6
+7
+7
+6
+7
+7
+7
+7
+7
+7
+7
+7
+7
+6
+7
+7
+6
+5
+7
+7
+7
+7
+6
+7
+7
+7
+7
+6
+7
+7
+7
+7
+5
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+6
+6
+7
+7
+7
+7
+7
+7
+6
+7
+6
+7
+7
+7
+7
+7
+6
+7
+7
+7
+7
+6
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+6
+6
+5
+7
+6
+7
+7
+7
+7
+7
+7
+7
+7
+7
+6
+7
+6
+6
+7
+6
+7
+6
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+5
+7
+7
+7
+7
+7
+6
+6
+7
+6
+6
+7
+6
+7
+7
+7
+7
+7
+7
+7
+7
+6
+7
+7
+7
+7
+7
+6
+6
+6
+7
+7
+7
+7
+7
+7
+7
+7
+6
+7
+6
+7
+6
+6
+7
+6
+7
+6
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+6
+7
+7
+7
+7
+7
+5
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+5
+6
+7
+7
+7
+6
+6
+7
+7
+7
+7
+7
+7
+7
+7
+7
+6
+7
+7
+7
+7
+7
+7
+7
+7
+7
+6
+7
+7
+7
+7
+6
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+5
+6
+7
+7
+7
+6
+7
+7
+7
+6
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+6
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+7
+6
+7
+6
+7
+7
+6
+7
+7
+7
+7
+5
+7
+7
+7
+7
+7
+7
+7
+7
+7
+6
+7
+7
+7
+7
+6
+7
+7
+6
+6
+6
+7
+7
+7
+7
+7
+7
+7
+7
+7
+6
+7
+7
+7
+7
+6
